--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.boot.version>2.0.3-RELEASE</spring.boot.version>
         <java.version>1.8</java.version>
     </properties>
 
@@ -60,6 +61,46 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <configuration>
+                    <baseDir>${project.basedir}</baseDir>
+                    <sourceDirectory>${project.basedir}/src/docs/asciidoc</sourceDirectory>
+                    <outputDirectory>generated-docs</outputDirectory>
+                    <headerFooter>true</headerFooter>
+                    <attributes>
+                        <name>${project.name}</name>
+                        <description>${project.description}</description>
+                        <project-groupId>${project.groupId}</project-groupId>
+                        <project-artifactId>${project.artifactId}</project-artifactId>
+                        <starter-artifactId>aop-metrics-spring-boot-starter</starter-artifactId>
+                        <project-version>${project.version}</project-version>
+                        <project-basedir>${project.basedir}</project-basedir>
+                    </attributes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <sourceHighlighter>coderay</sourceHighlighter>
+                            <backend>html5</backend>
+                            <attributes>
+                                <icons>font</icons>
+                            </attributes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <distributionManagement>
         <repository>
