--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,8 @@ management:
     web:
       server:
         auto-time-requests: false
+    export:
+      statsd:
+        enabled: true
+        flavor: telegraf
+        port: 8125
