--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.dm.infrastructure</groupId>
-    <artifactId>metrics</artifactId>
+    <artifactId>micrometer-metrics-wrapper</artifactId>
     <version>1.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
