--- a/pom.xml
+++ b/pom.xml
@@ -22,20 +22,20 @@
 
     <developers>
         <developer>
-            <organization>dm-drogerie markt GmbH &amp; Co. KG</organization>
-            <organizationUrl>https://dm.de</organizationUrl>
+            <organization>dmTECH GmbH</organization>
+            <organizationUrl>https://www.dmtech.de</organizationUrl>
             <name>Marcus Fessele</name>
             <email>marcus.fessele@dm.de</email>
         </developer>
         <developer>
-            <organization>dm-drogerie markt GmbH &amp; Co. KG</organization>
-            <organizationUrl>https://dm.de</organizationUrl>
+            <organization>dmTECH GmbH</organization>
+            <organizationUrl>https://www.dmtech.de</organizationUrl>
             <name>Dominik Johs</name>
             <email>dominik.johs@dm.de</email>
         </developer>
         <developer>
-            <organization>dm-drogerie markt GmbH &amp; Co. KG</organization>
-            <organizationUrl>https://dm.de</organizationUrl>
+            <organization>dmTECH GmbH</organization>
+            <organizationUrl>https://www.dmtech.de</organizationUrl>
             <name>Samuel Abt</name>
             <email>samuel.abt@dm.de</email>
         </developer>
