extract version to properties section

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <maven-javadoc-plugin.version.version>3.0.1</maven-javadoc-plugin.version.version>
         <sonar.coverage.exclusions>**/*App.java,**/*Properties.java</sonar.coverage.exclusions>
         <jacoco.version>0.8.2</jacoco.version>
+        <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -105,7 +106,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <version>${nexus-staging-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
