--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,3 @@
-management.metrics.web.server.auto-time-requests=true
+management.metrics.web.server.request.autotime.enabled=true
 management.metrics.export.statsd.flavor=telegraf
+management.metrics.export.statsd.enabled=true
