Upgrade to java 21 (LTS) * upgrade spring boot parent to 3.2.1 * upgrade to latest maven plugins

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>de.dm.infrastructure</groupId>
     <artifactId>micrometer-metrics-wrapper</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <name>micrometer-metrics-wrapper</name>
     <description>Micrometer wrapper to allow generic class level metric values</description>
@@ -32,12 +32,18 @@
             <name>Dominik Johs</name>
             <email>dominik.johs@dm.de</email>
         </developer>
+        <developer>
+            <organization>dmTECH GmbH</organization>
+            <organizationUrl>https://www.dmtech.de</organizationUrl>
+            <name>Camillo Krause genannt Barmann</name>
+            <email>camillo.krause-barmann@dm.de</email>
+        </developer>
     </developers>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.2.1</version>
         <relativePath/>
     </parent>
 
@@ -45,14 +51,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <java.version>17</java.version>
+        <java.version>21</java.version>
 
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version.version>3.4.1</maven-javadoc-plugin.version.version>
+        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+        <maven-javadoc-plugin.version.version>3.6.3</maven-javadoc-plugin.version.version>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
 
         <sonar.coverage.exclusions>**/*App.java,**/*Properties.java</sonar.coverage.exclusions>
     </properties>
